# WM-playground

./: .gitignore  README.md  config.yaml  pyproject.toml  todo.txt
conf/: config.yaml
conf/data/: base.yaml  legacy.yaml
conf/model/: base.yaml  large.yaml
conf/model/contrastive/: base.yaml
conf/model/dynamics/: base.yaml
conf/model/probe/: base.yaml
conf/model/vae/: base.yaml
conf/profiler/: base.yaml
conf/train/: base.yaml  debug.yaml  short.yaml  small.yaml
conf/wandb/: base.yaml
notebooks/: contrastive.ipynb  data_exploration.ipynb  vae.ipynb
scripts/: eval.py  generate_data.py  run_train.sh  train.py  vae_sweep.py
scripts/slurm/: train.sh
src/: config_schemas.py  data.py  models.py  trainer.py  utils.py
